--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/qorcjftns/MilServer/issues"
   },
-  "homepage": "https://github.com/qorcjftns/MilServer#readme"
+  "homepage": "https://github.com/qorcjftns/MilServer#readme",
+  "dependencies": {
+    "express": "^4.16.3"
+  }
 }
